Archive2/55/df7e4cd5d8d98b/output
+ clang++ -std=c++1y -O3 -Wall -Wextra -pedantic -Wno-unused-variable -Wno-unused-parameter main.cpp
main.cpp:1:1: error: C++ requires a type specifier for all declarations
goo();
^~~
1 error generated.
