Archive2/55/df7e4cd5d8d98b/main.cpp
goo();



int main()
{
    goo();
    return 0;
}

void goo()
{
}